--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
             </button>
                 
             <div class="social">
-                <a href="/">
+                <a href="#">
                     <img src="./img/twitter.svg" alt="twitter">
                 </a>
-                 <a href="/">
+                 <a href="#">
                     <img src="./img/github.svg" alt="github">
                 </a>
-                <a href="/">
+                <a href="#">
                     <img src="./img/dribble.svg" alt="dribble"> 
                 </a>
             </div>
